# irnas-lpuart-driver

./: CHANGELOG.md  Kconfig  README.md
drivers/: CMakeLists.txt  Kconfig
drivers/uart_lp/: CMakeLists.txt  Kconfig  uart_lp.c  uart_lp.h
dts/bindings/: irnas,lpuart.yaml  irnas,uart_lp.yaml
samples/basic/: CMakeLists.txt  README.md  prj.conf
samples/basic/src/: main.c
